hphp/hack/test/typecheck/parse_xhp_format_infinite_loop1.php.exp
File "parse_xhp_format_infinite_loop1.php", line 4, characters 17-17:
string not properly closed (Parsing[1002])
